--- a/Anaemic Prediction.ipynb
+++ b/Anaemic Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,18 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import (\n",
+    "    confusion_matrix,\n",
+    "    accuracy_score,\n",
+    "    recall_score, \n",
+    "    precision_score,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,100 +59,100 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>M</td>\n",
-       "      <td>43.26</td>\n",
-       "      <td>30.84</td>\n",
-       "      <td>25.90</td>\n",
-       "      <td>6.30</td>\n",
+       "      <td>43.2555</td>\n",
+       "      <td>30.8421</td>\n",
+       "      <td>25.9025</td>\n",
+       "      <td>6.3</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
-       "      <td>45.60</td>\n",
-       "      <td>28.19</td>\n",
-       "      <td>26.21</td>\n",
-       "      <td>13.50</td>\n",
+       "      <td>45.6033</td>\n",
+       "      <td>28.1900</td>\n",
+       "      <td>26.2067</td>\n",
+       "      <td>13.5</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>F</td>\n",
-       "      <td>45.01</td>\n",
-       "      <td>28.97</td>\n",
-       "      <td>26.02</td>\n",
-       "      <td>11.70</td>\n",
+       "      <td>45.0107</td>\n",
+       "      <td>28.9677</td>\n",
+       "      <td>26.0215</td>\n",
+       "      <td>11.7</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>F</td>\n",
-       "      <td>44.54</td>\n",
-       "      <td>28.99</td>\n",
-       "      <td>26.47</td>\n",
-       "      <td>13.50</td>\n",
+       "      <td>44.5398</td>\n",
+       "      <td>28.9899</td>\n",
+       "      <td>26.4703</td>\n",
+       "      <td>13.5</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>M</td>\n",
-       "      <td>43.29</td>\n",
-       "      <td>30.70</td>\n",
-       "      <td>26.02</td>\n",
-       "      <td>12.40</td>\n",
+       "      <td>43.2870</td>\n",
+       "      <td>30.6972</td>\n",
+       "      <td>26.0158</td>\n",
+       "      <td>12.4</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6</td>\n",
        "      <td>M</td>\n",
-       "      <td>45.10</td>\n",
-       "      <td>27.96</td>\n",
-       "      <td>26.94</td>\n",
-       "      <td>16.20</td>\n",
+       "      <td>45.0994</td>\n",
+       "      <td>27.9645</td>\n",
+       "      <td>26.9361</td>\n",
+       "      <td>16.2</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7</td>\n",
        "      <td>F</td>\n",
-       "      <td>43.15</td>\n",
-       "      <td>30.16</td>\n",
-       "      <td>26.69</td>\n",
-       "      <td>8.60</td>\n",
+       "      <td>43.1457</td>\n",
+       "      <td>30.1628</td>\n",
+       "      <td>26.6915</td>\n",
+       "      <td>8.6</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>8</td>\n",
        "      <td>F</td>\n",
-       "      <td>43.61</td>\n",
-       "      <td>29.11</td>\n",
-       "      <td>27.28</td>\n",
-       "      <td>10.30</td>\n",
+       "      <td>43.6103</td>\n",
+       "      <td>29.1099</td>\n",
+       "      <td>27.2798</td>\n",
+       "      <td>10.3</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9</td>\n",
        "      <td>F</td>\n",
-       "      <td>45.04</td>\n",
-       "      <td>29.17</td>\n",
-       "      <td>25.79</td>\n",
-       "      <td>13.00</td>\n",
+       "      <td>45.0423</td>\n",
+       "      <td>29.1660</td>\n",
+       "      <td>25.7918</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>10</td>\n",
        "      <td>F</td>\n",
-       "      <td>46.51</td>\n",
-       "      <td>27.43</td>\n",
-       "      <td>26.06</td>\n",
-       "      <td>9.70</td>\n",
+       "      <td>46.5143</td>\n",
+       "      <td>27.4282</td>\n",
+       "      <td>26.0575</td>\n",
+       "      <td>9.7</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -155,19 +161,19 @@
       ],
       "text/plain": [
        "   Number Sex  %Red Pixel  %Green pixel  %Blue pixel    Hb Anaemic\n",
-       "0       1   M       43.26         30.84        25.90  6.30     Yes\n",
-       "1       2   F       45.60         28.19        26.21 13.50      No\n",
-       "2       3  F        45.01         28.97        26.02 11.70      No\n",
-       "3       4   F       44.54         28.99        26.47 13.50      No\n",
-       "4       5  M        43.29         30.70        26.02 12.40      No\n",
-       "5       6   M       45.10         27.96        26.94 16.20      No\n",
-       "6       7   F       43.15         30.16        26.69  8.60     Yes\n",
-       "7       8  F        43.61         29.11        27.28 10.30      No\n",
-       "8       9   F       45.04         29.17        25.79 13.00      No\n",
-       "9      10   F       46.51         27.43        26.06  9.70     Yes"
+       "0       1   M     43.2555       30.8421      25.9025   6.3     Yes\n",
+       "1       2   F     45.6033       28.1900      26.2067  13.5      No\n",
+       "2       3  F      45.0107       28.9677      26.0215  11.7      No\n",
+       "3       4   F     44.5398       28.9899      26.4703  13.5      No\n",
+       "4       5  M      43.2870       30.6972      26.0158  12.4      No\n",
+       "5       6   M     45.0994       27.9645      26.9361  16.2      No\n",
+       "6       7   F     43.1457       30.1628      26.6915   8.6     Yes\n",
+       "7       8  F      43.6103       29.1099      27.2798  10.3      No\n",
+       "8       9   F     45.0423       29.1660      25.7918  13.0      No\n",
+       "9      10   F     46.5143       27.4282      26.0575   9.7     Yes"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,50 +244,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>43.26</td>\n",
-       "      <td>30.84</td>\n",
-       "      <td>25.90</td>\n",
-       "      <td>6.30</td>\n",
+       "      <td>43.2555</td>\n",
+       "      <td>30.8421</td>\n",
+       "      <td>25.9025</td>\n",
+       "      <td>6.3</td>\n",
        "      <td>Yes</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>45.60</td>\n",
-       "      <td>28.19</td>\n",
-       "      <td>26.21</td>\n",
-       "      <td>13.50</td>\n",
+       "      <td>45.6033</td>\n",
+       "      <td>28.1900</td>\n",
+       "      <td>26.2067</td>\n",
+       "      <td>13.5</td>\n",
        "      <td>No</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>45.01</td>\n",
-       "      <td>28.97</td>\n",
-       "      <td>26.02</td>\n",
-       "      <td>11.70</td>\n",
+       "      <td>45.0107</td>\n",
+       "      <td>28.9677</td>\n",
+       "      <td>26.0215</td>\n",
+       "      <td>11.7</td>\n",
        "      <td>No</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>44.54</td>\n",
-       "      <td>28.99</td>\n",
-       "      <td>26.47</td>\n",
-       "      <td>13.50</td>\n",
+       "      <td>44.5398</td>\n",
+       "      <td>28.9899</td>\n",
+       "      <td>26.4703</td>\n",
+       "      <td>13.5</td>\n",
        "      <td>No</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>43.29</td>\n",
-       "      <td>30.70</td>\n",
-       "      <td>26.02</td>\n",
-       "      <td>12.40</td>\n",
+       "      <td>43.2870</td>\n",
+       "      <td>30.6972</td>\n",
+       "      <td>26.0158</td>\n",
+       "      <td>12.4</td>\n",
        "      <td>No</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -292,14 +298,14 @@
       ],
       "text/plain": [
        "   %Red Pixel  %Green pixel  %Blue pixel    Hb Anaemic  F  M\n",
-       "0       43.26         30.84        25.90  6.30     Yes  0  1\n",
-       "1       45.60         28.19        26.21 13.50      No  1  0\n",
-       "2       45.01         28.97        26.02 11.70      No  1  0\n",
-       "3       44.54         28.99        26.47 13.50      No  1  0\n",
-       "4       43.29         30.70        26.02 12.40      No  0  1"
+       "0     43.2555       30.8421      25.9025   6.3     Yes  0  1\n",
+       "1     45.6033       28.1900      26.2067  13.5      No  1  0\n",
+       "2     45.0107       28.9677      26.0215  11.7      No  1  0\n",
+       "3     44.5398       28.9899      26.4703  13.5      No  1  0\n",
+       "4     43.2870       30.6972      26.0158  12.4      No  0  1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +765,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -791,13 +797,102 @@
        "       1, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[20,  1],\n",
+       "       [ 1,  4]], dtype=int64)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "\n",
+    "\"\"\"\n",
+    "             modelo\n",
+    "             N    P\n",
+    "dataset   N [TN, FP]\n",
+    "          P [FN, TP]\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_score(y_pred=y_pred, y_true=y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_pred=y_pred, y_true=y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9230769230769231"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_pred=y_pred, y_true=y_test)"
    ]
   },
   {
